--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ button {
   margin: 20px auto;
   padding: 10px;
   background: white;
+  text-align: center;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
@@ -238,6 +239,8 @@ button {
 .logo {
   width: 100px;
   margin-bottom: 15px;
+  display: block;
+  margin: 0 auto 10px auto;
 }
 
 /* Titel */
