--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ button {
 #top-banner, #bottom-banner {
   background-color: red;
   color: white;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
   font-weight: bold;
   text-align: center;
   text-transform: uppercase;
