--- a/style.css
+++ b/style.css
@@ -62,13 +62,11 @@ button {
 }
 
 /* Secret banners */
-#top-banner, #bottom-banner {
+#top-banner,
+#bottom-banner {
   background-color: red;
   color: white;
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 100%;
   font-weight: bold;
   text-align: center;
   text-transform: uppercase;
@@ -80,14 +78,14 @@ button {
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100%;
 }
 
 /* Top Actions (Logout etc.) */
 .top-actions {
+  width: 100%;
   display: flex;
   justify-content: flex-end;
-  padding: 10px 20px;
+  margin: 10px 0 20px 0;
 }
 
 /* CHAT BOX */
