--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   font-family: serif;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 60px 20px 60px 20px;
   background: #f5f5f5;
 }
 
@@ -61,21 +61,38 @@ button {
   font-size: 0.9em;
 }
 
+
 /* Secret banners */
 #top-banner {
+  background-color: red;
+  color: white;
+  width: 100%;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding: 6px 0;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
   z-index: 10;
+  pointer-events: none; /* Buttons darunter bleiben klickbar */
 }
 
 #bottom-banner {
+  background-color: red;
+  color: white;
+  width: 100%;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding: 6px 0;
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100%;
   z-index: 10;
+  pointer-events: none; /* Buttons darunter bleiben klickbar */
 }
 
 /* Top Actions (Logout etc.) */
