--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ button {
 #log div {
   white-space: pre-wrap;
   margin-bottom: 6px;
-  font: monospace;
+  font-family: monospace;
 }
 
 /* Input Row */
