--- a/style.css
+++ b/style.css
@@ -285,10 +285,12 @@ button {
 
 /* ASSIGNMENTS LISTE */
 #assignments-list {
-  max-width: 800px;
-  margin: 20px auto 50px auto;
-  padding: 0 10px;
+  width: 100%;
+  margin: 20px 0 50px 0;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
+
 
 .assignment {
   background-color: #fff;
@@ -301,6 +303,7 @@ button {
   gap: 12px;
   width: 100%;
   box-sizing: border-box;
+  overflow-x: auto;
 }
 
 /* Buttons nebeneinander */
