--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ button {
 
 /* Logos */
 .logo {
-  width: 100px;
+  width: 10vh;
   margin-bottom: 15px;
   display: block;
   margin: 0 auto 10px auto;
